--- a/index.html
+++ b/index.html
@@ -9,43 +9,47 @@ html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  color:#fff;
+  background-image: radial-gradient(circle at 30% 30%, #9f00ff1a 10%, transparent 60%),
+                    radial-gradient(circle at 70% 70%, #ff00ff1a 10%, transparent 60%),
+                    linear-gradient(180deg, #000 0%, #111 100%);
+  color:#c580ff;
+  transition:filter 0.5s;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
-  text-align:center;
-  animation:eyeGlow 2s ease-in-out forwards;
+  color:#fff; font-size:46px; font-weight:bold; z-index:3000;
+  text-shadow: 0 0 30px #ffffff, 0 0 60px #a855ff, 0 0 90px #6b21ff;
+  animation: glowFade 5s ease-in-out forwards;
+}
+@keyframes glowFade {
+  0% {opacity:0; filter:blur(10px);}
+  30% {opacity:1; filter:blur(3px);}
+  60% {opacity:1; filter:blur(1px);}
+  100% {opacity:0; filter:blur(10px);}
 }
 
-@keyframes eyeGlow {
-  0% { opacity:0.2; text-shadow:none; }
-  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
-  100% { opacity:0.2; text-shadow:none; }
-}
-
-/* --- HOME SCREEN --- */
+/* --- HOME SCREEN BUTTONS --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  border:none; border-radius:12px; color:#fff;
+  background: linear-gradient(45deg,#9f00ff,#b800ff,#d633ff);
+  border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  cursor:pointer; box-shadow:0 0 20px #a855ff,0 0 40px #a855ff,0 0 60px #6b21ff;
   z-index:1000;
 }
-#startBtn { margin-top:30vh; }
+#startBtn { margin-top:32vh; }
 #indexBtn { margin-top:20px; }
 
-/* --- Countdown & Score --- */
+/* --- SCORE --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#d166ff;
-  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
+  font-size:80px; color:#c580ff;
+  text-shadow:0 0 20px #a855ff,0 0 40px #a855ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
@@ -54,29 +58,30 @@ html, body {
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#d166ff; }
+#score { font-size:28px; color:#c580ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* --- Bubbles --- */
+/* --- BUBBLES --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#a044ff,#6a00f4);
-  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
+  background:linear-gradient(135deg,#a855ff,#6b21ff);
+  border:2px solid #c580ff; box-shadow:0 0 15px #a855ff,0 0 30px #c580ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; }
+.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; }
+.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; }
+.bubble.gravity { background: linear-gradient(135deg,#00ffff,#ff0); color:#000; font-size:28px; }
+.bubble.invert { background: linear-gradient(135deg,#ffffff,#a855ff); color:#000; font-size:26px; box-shadow:0 0 30px #fff, 0 0 60px #a855ff inset; }
 
-/* --- Index Panel --- */
+/* --- INDEX PANEL --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #d166ff;
+  z-index:999; box-shadow:0 -5px 30px #a855ff;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -87,35 +92,34 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #d166ff;
-  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #a855ff;
+  box-shadow:0 0 15px #a855ff inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
-
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* --- End Screen --- */
+/* --- END SCREEN --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#fff; font-size:40px;
+  justify-content:center; align-items:center; color:#c580ff; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
-  border:none; border-radius:10px; cursor:pointer; color:#fff;
-  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
-  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  border:none; border-radius:10px; cursor:pointer; color:white;
+  background: linear-gradient(45deg,#9f00ff,#b800ff,#d633ff);
+  box-shadow:0 0 20px #a855ff,0 0 40px #a855ff;
 }
 
-/* --- Version --- */
+/* --- VERSION LABEL --- */
 #versionLabel {
   position:fixed; top:10px; right:10px; font-size:16px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
 }
 
-/* --- Easter Egg --- */
+/* --- EASTER EGG --- */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:red; font-size:150px;
@@ -127,22 +131,16 @@ html, body {
   0%{opacity:0; transform:translateX(0);}
   10%{opacity:1; transform:translateX(-5px);}
   20%{transform:translateX(5px);}
-  30%{transform:translateX(-5px);}
-  40%{transform:translateX(5px);}
   50%{transform:translateX(-5px);}
-  60%{transform:translateX(5px);}
-  70%{transform:translateX(-5px);}
-  80%{transform:translateX(5px);}
-  90%{transform:translateX(-5px);}
   100%{opacity:0; transform:translateX(0);}
 }
 </style>
 </head>
 <body>
 
-<div id="loadingScreen">Level 12 studio</div>
+<div id="loadingScreen">Level 12 Studio</div>
 
-<div id="versionLabel">Released 1.1.0</div>
+<div id="versionLabel">Released 1.2.0</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -150,17 +148,18 @@ html, body {
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">0.25%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">2%:</span> Spawnuje 3 bubliny</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ffff,#ff0); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">3%:</span> Gravitační efekt</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffffff,#a855ff); color:#000;">!12!</div><div class="desc"><span class="rarity">1.5%:</span> Invertuje barvy na 5s a přidá +10 bodů</div></div>
 </div>
 
 <div id="countdown"></div>
 <div id="scoreContainer">
-  <div id="highscore">Nejvyšší skóre: 100</div>
-  <div id="score">Skóre: 100</div>
-  <div id="lives">Životy: 100000</div>
+  <div id="highscore">Nejvyšší skóre: 0</div>
+  <div id="score">Skóre: 0</div>
+  <div id="lives">Životy: 3</div>
 </div>
 
 <div id="endScreen">
@@ -192,17 +191,15 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },2000); // delší efekty zasvícení
+  },5200);
 });
 
-// --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -223,7 +220,6 @@ function attachButtonEvents(){
     startBtn.style.display='block';
     indexBtn.style.display='block';
   });
-  indexPanel.addEventListener('click',e=>e.stopPropagation());
   document.body.addEventListener('click',()=>{
     if(indexPanel.style.top==='30%'){
       indexPanel.style.top='100%';
@@ -239,7 +235,6 @@ function attachButtonEvents(){
   });
 }
 
-// --- Countdown ---
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -259,7 +254,6 @@ function startCountdown(){
   },1000);
 }
 
-// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -269,77 +263,59 @@ function startGame(){
 
 function spawnBubble(){
   if(!gameRunning) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
   const chance=Math.random();
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  if(chance<=0.4950){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
   else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.width=`${size}px`;
+  bubble.style.height=`${size}px`;
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  bubble.dataset.speed=(Math.random()*1.5+1);
   document.body.appendChild(bubble);
 
   const pop=()=>{
     if(!gameRunning) return;
-    if(['2x','144','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    popSound.currentTime=0; popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
-    else if(bubble.dataset.type==="gravity"){
-      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
-      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
-      bubbles.forEach(b=>{
-        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
-        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
-      });
+
+    switch(bubble.dataset.type){
+      case "2x": score*=2; break;
+      case "144": score+=144; break;
+      case "triple": for(let i=0;i<3;i++) spawnBubble(); break;
+      case "gravity":
+        const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+        const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+        bubbles.forEach(b=>{
+          b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
+          b.style.top=(by-parseFloat(b.style.height)/2)+'px';
+        });
+        break;
+      case "invert":
+        score+=10;
+        document.body.style.filter="invert(1)";
+        setTimeout(()=>{ document.body.style.filter="invert(0)"; },5000);
+        break;
+      default: score++;
     }
-    else score++;
-    if(score>999999999) score=999999999;
-    scoreEl.textContent="Skóre: "+score;
+
     if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
+    scoreEl.textContent="Skóre: "+score;
   };
 
   bubble.addEventListener('click',pop);
   bubble.addEventListener('touchstart',pop);
   bubbles.push(bubble);
-  setTimeout(spawnBubble,500);
-}
-
-function spawnSingleBubble(){
-  if(!gameRunning) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
-  const bubble=document.createElement('div'); bubble.classList.add('bubble');
-  bubble.textContent="12"; bubble.dataset.type="normal";
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px'; bubble.style.height=size+'px';
-  bubble.style.fontSize=size/3+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-
-  const pop=()=>{ 
-    if(!gameRunning) return; score++; 
-    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-  };
-  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
-  bubbles.push(bubble);
+  setTimeout(spawnBubble,600);
 }
 
 function updateBubbles(){
@@ -347,9 +323,10 @@ function updateBubbles(){
   bubbles.forEach(bubble=>{
     const top=parseFloat(bubble.style.top);
     bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){ 
-      lives--; livesEl.textContent="Životy: "+lives; 
-      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
+    if(top<=0){
+      lives--; livesEl.textContent="Životy: "+lives;
+      bubble.remove();
+      bubbles=bubbles.filter(b=>b!==bubble);
       if(lives<=0) endGame();
     }
   });
@@ -360,7 +337,7 @@ function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
   if(score===12 || score<=3){
-    easterEl.textContent = (score===12?'12':'BRUH');
+    easterEl.textContent=(score===12?'12':'BRUH');
     easterEl.style.display='flex';
     easterEl.style.animation='fadeShake 5s forwards';
     setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
