--- a/index.html
+++ b/index.html
@@ -9,47 +9,39 @@ html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  background-image: radial-gradient(circle at 30% 30%, #9f00ff1a 10%, transparent 60%),
+  background-image: radial-gradient(circle at 30% 30%, #0ff1 10%, transparent 60%),
                     radial-gradient(circle at 70% 70%, #ff00ff1a 10%, transparent 60%),
                     linear-gradient(180deg, #000 0%, #111 100%);
-  color:#c580ff;
-  transition:filter 0.5s;
+  color:#0ff;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:46px; font-weight:bold; z-index:3000;
-  text-shadow: 0 0 30px #ffffff, 0 0 60px #a855ff, 0 0 90px #6b21ff;
-  animation: glowFade 5s ease-in-out forwards;
-}
-@keyframes glowFade {
-  0% {opacity:0; filter:blur(10px);}
-  30% {opacity:1; filter:blur(3px);}
-  60% {opacity:1; filter:blur(1px);}
-  100% {opacity:0; filter:blur(10px);}
+  color:white; font-size:50px; font-weight:bold; z-index:3000;
+  text-shadow: 0 0 5px #fff,0 0 15px #fff,0 0 30px #fff;
 }
 
-/* --- HOME SCREEN BUTTONS --- */
+/* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#9f00ff,#b800ff,#d633ff);
+  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
   border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 20px #a855ff,0 0 40px #a855ff,0 0 60px #6b21ff;
+  cursor:pointer; box-shadow:0 0 20px #0ff,0 0 40px #0ff;
   z-index:1000;
 }
-#startBtn { margin-top:32vh; }
+#startBtn { margin-top:30vh; }
 #indexBtn { margin-top:20px; }
 
-/* --- SCORE --- */
+/* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#c580ff;
-  text-shadow:0 0 20px #a855ff,0 0 40px #a855ff;
+  font-size:80px; color:#0ff;
+  text-shadow:0 0 20px #0ff,0 0 40px #0ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
@@ -58,30 +50,30 @@ html, body {
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#c580ff; }
+#score { font-size:28px; color:#0ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* --- BUBBLES --- */
+/* --- Bubbles --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#a855ff,#6b21ff);
-  border:2px solid #c580ff; box-shadow:0 0 15px #a855ff,0 0 30px #c580ff inset;
+  background:linear-gradient(135deg,#00ffff,#ff00ff);
+  border:2px solid #0ff; box-shadow:0 0 15px #0ff,0 0 30px #0ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; }
-.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; }
-.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; }
-.bubble.gravity { background: linear-gradient(135deg,#00ffff,#ff0); color:#000; font-size:28px; }
-.bubble.invert { background: linear-gradient(135deg,#ffffff,#a855ff); color:#000; font-size:26px; box-shadow:0 0 30px #fff, 0 0 60px #a855ff inset; }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
+.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
+.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
+.bubble.gravity { background: linear-gradient(135deg,#00ffff,#ff0); color:#000; font-size:28px; box-shadow:0 0 25px #0ff,0 0 50px #ff0 inset;}
+.bubble.colorFlip { background: linear-gradient(135deg,#fff,#ccc); color:#000; font-size:24px; box-shadow:0 0 25px #fff,0 0 50px #fff inset;}
 
-/* --- INDEX PANEL --- */
+/* --- Index Panel --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #a855ff;
+  z-index:999; box-shadow:0 -5px 30px #0ff;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -92,34 +84,35 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #a855ff;
-  box-shadow:0 0 15px #a855ff inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #0ff;
+  box-shadow:0 0 15px #0ff inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
+
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* --- END SCREEN --- */
+/* --- End Screen --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#c580ff; font-size:40px;
+  justify-content:center; align-items:center; color:#0ff; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
   border:none; border-radius:10px; cursor:pointer; color:white;
-  background: linear-gradient(45deg,#9f00ff,#b800ff,#d633ff);
-  box-shadow:0 0 20px #a855ff,0 0 40px #a855ff;
+  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
+  box-shadow:0 0 20px #0ff,0 0 40px #0ff;
 }
 
-/* --- VERSION LABEL --- */
+/* --- Version --- */
 #versionLabel {
   position:fixed; top:10px; right:10px; font-size:16px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
 }
 
-/* --- EASTER EGG --- */
+/* --- Easter Egg --- */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:red; font-size:150px;
@@ -131,16 +124,28 @@ html, body {
   0%{opacity:0; transform:translateX(0);}
   10%{opacity:1; transform:translateX(-5px);}
   20%{transform:translateX(5px);}
+  30%{transform:translateX(-5px);}
+  40%{transform:translateX(5px);}
   50%{transform:translateX(-5px);}
+  60%{transform:translateX(5px);}
+  70%{transform:translateX(-5px);}
+  80%{transform:translateX(5px);}
+  90%{transform:translateX(-5px);}
   100%{opacity:0; transform:translateX(0);}
+}
+
+/* --- Color Flip Animation --- */
+@keyframes flashWhite {
+  0%,100% { filter: brightness(1); }
+  50% { filter: brightness(3); }
 }
 </style>
 </head>
 <body>
 
-<div id="loadingScreen">Level 12 Studio</div>
+<div id="loadingScreen">Level 12 studio</div>
 
-<div id="versionLabel">Released 1.2.0</div>
+<div id="versionLabel">Released 1.2.1</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -148,11 +153,11 @@ html, body {
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">0.25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">1%:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ffff,#ff0); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">3%:</span> Gravitační efekt</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffffff,#a855ff); color:#000;">!12!</div><div class="desc"><span class="rarity">1.5%:</span> Invertuje barvy na 5s a přidá +10 bodů</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ffff,#ff0); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#ccc); color:#000;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Přetočí barvy 5s a +10 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -191,15 +196,19 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-window.addEventListener('load',()=>{
+// --- LOADING SCREEN MOBILE FRIENDLY ---
+document.addEventListener('DOMContentLoaded',()=>{
+  loadingScreen.style.display='flex';
+  loadingScreen.style.animation='flashWhite 3.8s forwards';
   setTimeout(()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },5200);
+  },3800);
 });
 
+// --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -220,6 +229,7 @@ function attachButtonEvents(){
     startBtn.style.display='block';
     indexBtn.style.display='block';
   });
+  indexPanel.addEventListener('click',e=>e.stopPropagation());
   document.body.addEventListener('click',()=>{
     if(indexPanel.style.top==='30%'){
       indexPanel.style.top='100%';
@@ -235,6 +245,7 @@ function attachButtonEvents(){
   });
 }
 
+// --- Countdown ---
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -254,6 +265,7 @@ function startCountdown(){
   },1000);
 }
 
+// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -263,59 +275,87 @@ function startGame(){
 
 function spawnBubble(){
   if(!gameRunning) return;
-  const chance=Math.random();
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const chance=Math.random()*100; // 0-100
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else if(chance<=1.0000){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  if(chance<=1.5){ 
+    bubble.classList.add('colorFlip'); bubble.textContent="!12"; bubble.dataset.type="colorFlip"; 
+  }
+  else if(chance<=2){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=3.5){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=6.5){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=9.5){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`;
-  bubble.style.height=`${size}px`;
+  bubble.style.width=size+'px';
+  bubble.style.height=size+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1);
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
   document.body.appendChild(bubble);
 
   const pop=()=>{
     if(!gameRunning) return;
-    popSound.currentTime=0; popSound.play();
+    if(['2x','144','triple','gravity','colorFlip'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
 
-    switch(bubble.dataset.type){
-      case "2x": score*=2; break;
-      case "144": score+=144; break;
-      case "triple": for(let i=0;i<3;i++) spawnBubble(); break;
-      case "gravity":
-        const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
-        const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
-        bubbles.forEach(b=>{
-          b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
-          b.style.top=(by-parseFloat(b.style.height)/2)+'px';
-        });
-        break;
-      case "invert":
-        score+=10;
-        document.body.style.filter="invert(1)";
-        setTimeout(()=>{ document.body.style.filter="invert(0)"; },5000);
-        break;
-      default: score++;
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{
+        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
+        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
+      });
     }
+    else if(bubble.dataset.type==="colorFlip"){
+      score+=10;
+      document.body.style.filter="hue-rotate(180deg)";
+      setTimeout(()=>{ document.body.style.filter=""; },5000);
+    }
+    else score++;
 
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
+    if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
   };
 
   bubble.addEventListener('click',pop);
   bubble.addEventListener('touchstart',pop);
   bubbles.push(bubble);
-  setTimeout(spawnBubble,600);
+  setTimeout(spawnBubble,500);
+}
+
+function spawnSingleBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{ 
+    if(!gameRunning) return; score++; 
+    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+  };
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
 }
 
 function updateBubbles(){
@@ -323,10 +363,9 @@ function updateBubbles(){
   bubbles.forEach(bubble=>{
     const top=parseFloat(bubble.style.top);
     bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){
-      lives--; livesEl.textContent="Životy: "+lives;
-      bubble.remove();
-      bubbles=bubbles.filter(b=>b!==bubble);
+    if(top<=0){ 
+      lives--; livesEl.textContent="Životy: "+lives; 
+      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
       if(lives<=0) endGame();
     }
   });
@@ -337,7 +376,7 @@ function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
   if(score===12 || score<=3){
-    easterEl.textContent=(score===12?'12':'BRUH');
+    easterEl.textContent = (score===12?'12':'BRUH');
     easterEl.style.display='flex';
     easterEl.style.animation='fadeShake 5s forwards';
     setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
